--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./styles/foods.css">
     <title>Document</title>
 </head>
 <body>
+
+    <article class="foodList">
+        
+    </article>
     <script src="/scripts/foodapi.js"></script>
 </body>
 </html>
